# bdbvu

./: .gitignore  CMakeLists.txt  Makefile  bdbvu.pro  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/modules/: FindBerkeleyDB.cmake
